logic building/assignments/assignment2/section1/snippet22.txt
snippet22
public class Main {
public static void main(String[] args) {
static void displayMessage() {
System.out.println("Message");
}
}
}

Main.java:103: error: illegal start of expression
static void displayMessage() {
^
Main.java:107: error: class, interface, enum, or record expected
}

Java does not support nested methods(i.e methods inside another methods)